fixing alignment of team members and one woman in each slide, adding missing members and more css beautification <vkool>

--- a/css/custom.css
+++ b/css/custom.css
@@ -156,9 +156,6 @@ html {
 .about img{
       width: 30vw;
 }
-.about p{
-
-}
 
 .blog>.blue-box img{
   width: 8vw;
@@ -181,9 +178,12 @@ html {
     margin-left: 40px;
     margin-right: 40px;
 }
+.contact-container p{
+    font-weight: normal;
+}
+
 .footer img{
     height: 70px;
-    margin-top: 40px;
 }
 .white-font{
     color: #ffffff;
@@ -194,11 +194,60 @@ html {
     margin-right: 100px;
 }
 .blog-summary-box{
-    height: 200px;
+    height: 165px;
+}
+.blog-summary-box img{
+    height: 100px;
 }
 .contact-city{
     font-weight: normal;
 }
 .chosen-city{
     background: rgb(231, 195, 195);
+}
+.service-icon{
+    height: 40px;
+    width: auto;
+}
+.career{
+    height:600px;
+    width:100%;
+    position:relative;
+    margin-top: -50px;
+}
+.career img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+.career-header span{
+    position: absolute;
+    top: 5%;
+    left: 21%;
+    width: 60%;
+    color: white;
+    text-align: center;
+
+}
+.career p{
+    z-index:100;
+    background-color: rgba(22,79,134,0.5);
+    position: absolute;
+    top: 22%;
+    left: 21%;
+    height: 45%;
+    width: 60%;
+
+    text-align: center;
+    padding: 50px 20px 50px 20px;
+    font-size: 22px;
+    font-weight: 300;
+    color: white;
+    font-family: 'Lato', sans-serif;
+}
+#team .bx-next{
+    z-index: 0;
+}
+#team .bx-prev{
+    z-index: 0;
 }
